image caption alignment fix

--- a/_sass/_includes/_component__image.scss
+++ b/_sass/_includes/_component__image.scss
@@ -1,7 +1,6 @@
 .include__figure {
   display: block;
   margin: 3rem 0;
-  max-width: 1200px;
 }
 
 .include__image {
@@ -16,4 +15,6 @@
   font-size: small;
   line-height: 150%;
   padding: 8px 16px;
+  max-width: 1200px;
+  margin: auto;
 }
